# classic_examples_posts

./: alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0a93f25a175d_.py  cc84c9650751_.py
sources/posts/: composite.py  database.py  mapping.py  model.py  models.py  resource.py  schemas.py  settings.py  start_ddl.py  tools.py  use_case.py  validators.py
sources/posts/sql/datasets/: init.sql
sources/posts/sql/migrations/: 002_add_books_and_reader.sql
sources/posts/sql/queries/: create_author.sql  create_channel.sql  create_post.sql  create_rental.sql  select_author.sql.tmpl  select_channel.sql.tmpl  select_post.sql
sources/posts/sql/schema/: ddl.sql
sources/tests/: conftest.py  manual.py  test_author_resource.py
